--- a/static/app.html
+++ b/static/app.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>DomChat</title>
+    <!--<link rel="stylesheet" type="text/css" href="styles/bootstrap.css">-->
+    <link rel="stylesheet" href="styles/font-awesome.css">
 </head>
 <body>
     <div id="app">
