add/view/delete message - only for one constat channel without auto refresh, not work prav

--- a/static/app.html
+++ b/static/app.html
@@ -5,6 +5,7 @@
     <title>DomChat</title>
     <!--<link rel="stylesheet" type="text/css" href="styles/bootstrap.css">-->
     <link rel="stylesheet" href="styles/font-awesome.css">
+    <link rel="stylesheet" href="styles/react-select.css">
 </head>
 <body>
     <div id="app">
